--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
 </div>
 
 <div class="copyright">
-    <p>© 2021 Tech2 etc - HTML CSS Ecommerce Template</p>
+    <p>© priyanshu singh</p>
 </div>
 
 </footer>
