--- a/about.html
+++ b/about.html
@@ -166,7 +166,7 @@ Perspiciatis, quod ipsa aliquam, eaque maxime reiciendis atque assumenda neque p
 </div>
 
 <div class="copyright">
-    <p>© 2021 Tech2 etc - HTML CSS Ecommerce Template</p>
+    <p>© priyanshu singh</p>
 </div>
 
 </footer>
