--- a/blog.html
+++ b/blog.html
@@ -206,7 +206,7 @@
 </div>
 
 <div class="copyright">
-    <p>© 2021 Tech2 etc - HTML CSS Ecommerce Template</p>
+    <p>© priyanshu singh</p>
 </div>
 
 </footer>
