--- a/blog.html
+++ b/blog.html
@@ -26,7 +26,7 @@
 </div>
 
 <div id="mobile">
-    <i class="fa-solid fa-cart-shopping"></i>
+    <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
     <i id="bar" class="fas fa-outdent"></i>
     
 
