--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
 <div>
 <li>
 <i class="fa-solid fa-map"></i>
-<p>56 Glassford Street Glosgow G1 1UL New York</p>
+<p>Nilmattha , Lucknow(UP)-226002</p>
 </li>
 <li>
     <i class="fa-solid fa-envelope"></i>
