--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 <li><a href="blog.html">BLOG</a></li>
 <li><a href="about.html">ABOUT</a></li>
 <li><a href="contact.html">CONTACT</a></li>
-<li><a id="lg-bag" href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
+<li><a id="lg-bag" href="cart.html"><i class="fa-solid fa-cart-shopping"><span id="cartNo">0</span></i></a></li>
 <a href="#" id="close"><i class="fa-solid fa-xmark"></i></a>
 </ul> 
 </div>
 
 <div id="mobile">
-  <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+  <a href="cart.html"><i class="fa-solid fa-cart-shopping"><span id="cartNo1">0</span></i></a>
     <i id="bar" class="fas fa-outdent"></i>
     
 
@@ -96,7 +96,7 @@
               </div>
               <h4>₹789</h4>
               </div>
-              <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+              <a href="#"><i id="cart1" class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
         <div class="pro">
             <img src="img/products/f2.jpg" alt="">
@@ -113,7 +113,7 @@
               </div>
               <h4>₹780</h4>
               </div>
-              <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+              <a href="#"><i  id="cart2" class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
         <div class="pro">
             <img src="img/products/f3.jpg" alt="">
@@ -129,7 +129,7 @@
               </div>
               <h4>₹669</h4>
               </div>
-              <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+              <a href="#"><i  id="cart3" class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
         <div class="pro">
             <img src="img/products/f4.jpg" alt="">
@@ -145,7 +145,7 @@
               </div>
               <h4>₹999</h4>
               </div>
-              <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+              <a href="#"><i id="cart4"  class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
         <div class="pro">
             <img src="img/products/f5.jpg" alt="">
@@ -161,7 +161,7 @@
               </div>
               <h4>₹889</h4>
               </div>
-              <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+              <a href="#"><i  id="cart5" class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
         <div class="pro">
             <img src="img/products/f6.jpg" alt="">
@@ -177,7 +177,7 @@
               </div>
               <h4>₹919</h4>
               </div>
-              <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+              <a href="#"><i  id="cart6" class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
         <div class="pro">
             <img src="img/products/f7.jpg" alt="">
@@ -193,7 +193,7 @@
               </div>
               <h4>₹658</h4>
               </div>
-              <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+              <a href="#"><i id="cart7"  class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
         <div class="pro">
             <img src="img/products/f8.jpg" alt="">
@@ -209,7 +209,7 @@
               </div>
               <h4>₹789</h4>
               </div>
-              <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+              <a href="#"><i  id="cart8" class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
     </div>
 </section>
@@ -243,7 +243,7 @@
               </div>
               <h4>₹778</h4>
               </div>
-              <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+              <a href="#"><i id="cart9"  class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
         <div class="pro">
             <img src="img/products/n2.jpg" alt="">
@@ -260,7 +260,7 @@
               </div>
               <h4>₹870</h4>
               </div>
-              <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+              <a href="#"><i  id="cart10" class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
         <div class="pro">
             <img src="img/products/n3.jpg" alt="">
@@ -276,7 +276,7 @@
               </div>
               <h4>₹669</h4>
               </div>
-              <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+              <a href="#"><i  id="cart11" class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
         <div class="pro">
             <img src="img/products/n4.jpg" alt="">
@@ -292,7 +292,7 @@
               </div>
               <h4>₹999</h4>
               </div>
-              <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+              <a href="#"><i  id="cart12" class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
         <div class="pro">
             <img src="img/products/n5.jpg" alt="">
@@ -308,7 +308,7 @@
               </div>
               <h4>₹889</h4>
               </div>
-              <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+              <a href="#"><i  id="cart13" class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
         <div class="pro">
             <img src="img/products/n6.jpg" alt="">
@@ -324,7 +324,7 @@
               </div>
               <h4>₹819</h4>
               </div>
-              <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+              <a href="#"><i  id="cart14" class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
         <div class="pro">
             <img src="img/products/n7.jpg" alt="">
@@ -340,7 +340,7 @@
               </div>
               <h4>₹558</h4>
               </div>
-              <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+              <a href="#"><i  id="cart15" class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
         <div class="pro">
             <img src="img/products/n8.jpg" alt="">
@@ -356,7 +356,7 @@
               </div>
               <h4>₹889</h4>
               </div>
-              <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+              <a href="#"><i  id="cart16" class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
     </div>
 </section>
