--- a/cart.html
+++ b/cart.html
@@ -20,13 +20,13 @@
 <li><a  href="blog.html">BLOG</a></li>
 <li><a  href="about.html">ABOUT</a></li>
 <li><a  href="contact.html">CONTACT</a></li>
-<li><a class="active" id="lg-bag" href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
+<li><a class="active" id="lg-bag" href="cart.html"><i class="fa-solid fa-cart-shopping"><span id="cartNo">0</span></i></a></li>
 <a href="#" id="close"><i class="fa-solid fa-xmark"></i></a>
 </ul> 
 </div>
 
 <div id="mobile">
-  <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+  <a href="cart.html"><i class="fa-solid fa-cart-shopping"><span id="cartNo1">0</span></i></a>
     <i id="bar" class="fas fa-outdent"></i>
     
 
