--- a/shop.html
+++ b/shop.html
@@ -20,13 +20,13 @@
 <li><a href="blog.html">BLOG</a></li>
 <li><a href="about.html">ABOUT</a></li>
 <li><a href="contact.html">CONTACT</a></li>
-<li><a id="lg-bag" href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
+<li><a id="lg-bag" href="cart.html"><i class="fa-solid fa-cart-shopping"><span id="cartNo">0</span></i></a></li>
 <a href="#" id="close"><i class="fa-solid fa-xmark"></i></a>
 </ul> 
 </div>
 
 <div id="mobile">
-   <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+   <a href="cart.html"><i class="fa-solid fa-cart-shopping"><span id="cartNo1">0</span></i></a>
     <i id="bar" class="fas fa-outdent"></i>
     
 
@@ -60,7 +60,7 @@
               </div>
               <h4>₹789</h4>
               </div>
-              <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+              <a href="#"><i id="cart1" class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
         <div class="pro">
             <img src="img/products/f2.jpg" alt="">
@@ -77,7 +77,7 @@
               </div>
               <h4>₹780</h4>
               </div>
-              <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+              <a href="#"><i id="cart2" class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
         <div class="pro">
             <img src="img/products/f3.jpg" alt="">
@@ -93,7 +93,7 @@
               </div>
               <h4>₹669</h4>
               </div>
-              <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+              <a href="#"><i id="cart3" class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
         <div class="pro">
             <img src="img/products/f4.jpg" alt="">
@@ -109,7 +109,7 @@
               </div>
               <h4>₹999</h4>
               </div>
-              <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+              <a href="#"><i id="cart4" class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
         <div class="pro">
             <img src="img/products/f5.jpg" alt="">
@@ -125,7 +125,7 @@
               </div>
               <h4>₹889</h4>
               </div>
-              <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+              <a href="#"><i id="cart5" class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
         <div class="pro">
             <img src="img/products/f6.jpg" alt="">
@@ -141,7 +141,7 @@
               </div>
               <h4>₹919</h4>
               </div>
-              <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+              <a href="#"><i id="cart6" class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
         <div class="pro">
             <img src="img/products/f7.jpg" alt="">
@@ -157,7 +157,7 @@
               </div>
               <h4>₹658</h4>
               </div>
-              <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+              <a href="#"><i id="cart7" class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
         <div class="pro">
             <img src="img/products/f8.jpg" alt="">
@@ -173,7 +173,7 @@
               </div>
               <h4>₹789</h4>
               </div>
-              <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+              <a href="#"><i id="cart8" class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
 
         <div class="pro">
@@ -190,7 +190,7 @@
               </div>
               <h4>₹778</h4>
               </div>
-              <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+              <a href="#"><i id="cart9" class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
         <div class="pro">
             <img src="img/products/n2.jpg" alt="">
@@ -207,7 +207,7 @@
               </div>
               <h4>₹870</h4>
               </div>
-              <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+              <a href="#"><i id="cart10" class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
         <div class="pro">
             <img src="img/products/n3.jpg" alt="">
@@ -223,7 +223,7 @@
               </div>
               <h4>₹669</h4>
               </div>
-              <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+              <a href="#"><i id="cart11" class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
         <div class="pro">
             <img src="img/products/n4.jpg" alt="">
@@ -239,7 +239,7 @@
               </div>
               <h4>₹999</h4>
               </div>
-              <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+              <a href="#"><i id="cart12" class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
         <div class="pro">
             <img src="img/products/n5.jpg" alt="">
@@ -255,7 +255,7 @@
               </div>
               <h4>₹889</h4>
               </div>
-              <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+              <a href="#"><i id="cart13" class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
         <div class="pro">
             <img src="img/products/n6.jpg" alt="">
@@ -271,7 +271,7 @@
               </div>
               <h4>₹819</h4>
               </div>
-              <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+              <a href="#"><i id="cart14" class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
         <div class="pro">
             <img src="img/products/n7.jpg" alt="">
@@ -287,7 +287,7 @@
               </div>
               <h4>₹558</h4>
               </div>
-              <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+              <a href="#"><i id="cart15" class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
         <div class="pro">
             <img src="img/products/n8.jpg" alt="">
@@ -303,7 +303,7 @@
               </div>
               <h4>₹889</h4>
               </div>
-              <a href="#"><i class="fa-solid fa-cart-shopping cart"></i></a>
+              <a href="#"><i id="cart16" class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
     </div>
 </section>
