--- a/sproduct.html
+++ b/sproduct.html
@@ -71,7 +71,7 @@
 </select>
 
 <input type="number"  value="1" >
-<button class="normal">Add To Cart</button>
+<button id="cart1" class="normal">Add To Cart</button>
 
 <h4>Product Details</h4>
 <span>Make a stellar addition to your wardrobe with this beautiful white floral shirt for men from the latest collection of Selected Homme. Tailored in fine cotton for superb absorption and unmatched wear comfort, it's Slim fit cut and print pattern give it a modern yet classic touch.MADE WITH ORGANIC COTTON This product is made with organic cotton. Organic cotton is grown without the use of harmful chemicals.</span>
