--- a/shop.html
+++ b/shop.html
@@ -46,8 +46,8 @@
 
 <section id="product1" class="section-p2">
     <div class="pro-container">
-        <div class="pro"  onclick="window.location.href='sproduct.html'">
-            <img src="img/products/f1.jpg" alt="">
+        <div class="pro" >
+            <img  onclick="window.location.href='sproduct.html'" src="img/products/f1.jpg" alt="">
             <div class="des">
               <span>adidas</span>
               <h5>Cartoon Astronaut Half sleev shirt</h5>
