--- a/sproduct.html
+++ b/sproduct.html
@@ -170,8 +170,8 @@
     <div class="col">
         <img src="img/img.png" style="height: 100px;margin-top: -35px;">
         <h4>Contact</h4>
-        <p><strong>Address:</strong>Nilmattha , Lucknow(UP)-226002</p>
-        <p><strong>Phone:</strong>6387002645</p>
+        <p><strong>Address:</strong>Lucknow(UP)-226002</p>
+        <p><strong>Phone:</strong>+91 0000000000</p>
         <p><strong>Hours:</strong>10:00 - 18:00 , Mon - Sat</p>
         <div class="follow">
             <h4>Follow us</h4>
